WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223139
[Cocoa][WebM] Hang when reloading page before WebM content is loaded
https://bugs.webkit.org/show_bug.cgi?id=223139
Summary
[Cocoa][WebM] Hang when reloading page before WebM content is loaded
Jer Noble
Reported
2021-03-12 13:41:08 PST
[Cocoa][WebM] Hang when reloading page before WebM content is loaded
Attachments
Patch
(3.72 KB, patch)
2021-03-12 13:46 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-03-12 13:41:35 PST
<
rdar://75351029
>
Jer Noble
Comment 2
2021-03-12 13:46:46 PST
Created
attachment 423079
[details]
Patch
Jer Noble
Comment 3
2021-03-12 17:36:29 PST
mac-wk2 failure is the same Photos.framework assertion that we've been tracking elsewhere, and unrelated to this patch.
Darin Adler
Comment 4
2021-03-12 17:47:32 PST
(In reply to Jer Noble from
comment #3
)
> mac-wk2 failure is the same Photos.framework assertion that we've been > tracking elsewhere, and unrelated to this patch.
Where?
Peng Liu
Comment 5
2021-03-12 18:05:44 PST
Should be
bug 222277
.
EWS
Comment 6
2021-03-12 18:29:59 PST
Committed
r274378
: <
https://commits.webkit.org/r274378
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423079
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug